# movie-scrapper

./: .travis.yml  README.rst  app.py  pyproject.toml
data/: database.csv
movie_scrapper/: data_processing.py  page_information_extraction.py  scrapper.py
tests/: test_data_processing.py  test_movie_scrapper.py  test_page_information_extraction.py
