[tool.poetry]
name = "movie-scrapper"
version = "0.1.0"
description = ""
authors = ["Felipe Sassi <felipesassi@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
